--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ homepage: https://docs.waterbus.tech
 repository: https://github.com/waterbustech/waterbus
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,9 +33,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_web_plugins: 
-    sdk: flutter       
-
+  flutter_web_plugins:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +68,11 @@ dependencies:
   firebase_auth: ^4.17.9
   firebase_crashlytics: ^3.4.19
   firebase_performance: ^0.9.3+18
+  firebase_core_desktop:
+    git:
+      url: https://github.com/fademan01/flutterfire_desktop
+      path: packages/firebase_core/firebase_core_desktop
+      ref: fixes
 
   # Utils
   lottie: ^3.1.0
@@ -87,7 +91,7 @@ dependencies:
   universal_io: ^2.2.2
   url_launcher: ^6.2.5
   flutter_advanced_segment: ^3.0.2
-  sizer: 
+  sizer:
     path: ./packages/sizer
   flutter_localizations:
     sdk: flutter
@@ -107,9 +111,9 @@ dependencies:
   # waterbus_sdk:
   #   path: /Users/lambiengcode/Documents/flutter_waterbus_sdk
 
-dependency_overrides: 
+dependency_overrides:
   watcher: ^1.1.0
-  win32: ^5.0.5 
+  win32: ^5.0.5
   web: ^0.5.1
 
 dev_dependencies:
@@ -139,7 +143,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
